# moterm

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
bundle/Moterm.app/Contents/: Info.plist
bundle/Moterm.app/Contents/MacOS/: moterm
src/: clipboard.rs  color.rs  config.rs  font.rs  input.rs  main.rs  mouse.rs  pty.rs  renderer.rs  search.rs  terminal.rs  url.rs  vte_handler.rs
