[package]
name = "moterm"
version = "0.1.0"
edition = "2021"
description = "A minimal, blazing-fast terminal emulator"
license = "MIT"
repository = "https://github.com/longzhi/moterm"
homepage = "https://github.com/longzhi/moterm"
keywords = ["terminal", "emulator", "pty", "lightweight"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
winit = "0.28"
softbuffer = "0.3"
fontdue = { version = "0.8", default-features = false }
vte = "0.13"
libc = "0.2"
polling = "3"
unicode-width = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
